Add some style via bootstrap

--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -1,6 +1,6 @@
 nome.vazio = Nome não pode ser vazio!
 dataNascimento.vazia = Data de Nasciomento não pode ser vazia!
-matricula.invalida = Essa mátricula não é válida!
+matricula.invalida = Essa matrícula não é válida!
 funcionario.nome = Nome do Funcionário
 funcionario.dataNascimento = Data de Nascimento do Funcionário
 funcionario.matricula = Matricula do Funcionário
